material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/guide-viewer/guide-viewer.scss
@import "~@angular/material/theming";
@import '../../../styles/constants';

/* For desktop, the content should be aligned with the page title. */
$guide-content-margin-side: 70px;
$guide-content-margin-side-xs: 15px;

:host {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.docs-guide-wrapper {
  padding: 20px $content-padding-side 0;
  display: block;
  text-align: center;

  @media ($mat-xsmall) {
    padding-left: $content-padding-side-xs;
    padding-right: $content-padding-side-xs;
  }
}

.docs-guide-toc-and-content {
  display: flex;
  align-items: flex-start;

  text-align: left;
  max-width: 940px;
  margin: 0 auto;

  @media (max-width: $extra-small-breakpoint-width) {
    flex-direction: column;
  }
}

.docs-guide-content {
  flex-grow: 1;
  width: 80%;

  @media (max-width: $extra-small-breakpoint-width) {
    width: 100%;
  }
}

table-of-contents {
  top: 35px;
  position: sticky;

  // Reposition on top of content on small screens and remove
  // sticky positioning
  @media (max-width: $extra-small-breakpoint-width) {
    order: -1;
    position: inherit;
    width: auto;
    padding-left: 0;
  }
}

